# mailtd-python

./: .gitignore  README.md  pyproject.toml
mailtd/: __init__.py  client.py  crypto.py  pow.py  types.py
mailtd/resources/: accounts.py  billing.py  domains.py  messages.py  sandbox.py  tokens.py  user.py  webhooks.py
tests/: test_crypto.py
