[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailtd"
version = "1.3.2"
description = "Official Python SDK for Mail.td — temp mail API, email testing, and SMTP sandbox for developers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0"]
keywords = ["temp-mail", "temporary-email", "disposable-email", "email-testing", "smtp-sandbox", "email-sandbox", "email-api", "test-email", "email-verification", "mailtd", "mail-td", "sdk"]
authors = [{name = "Mail.td"}]

[project.urls]
Homepage = "https://mail.td"
Documentation = "https://docs.mail.td"
Repository = "https://github.com/mailtd/mailtd-python"

[tool.setuptools.packages.find]
include = ["mailtd*"]
