[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailtd"
version = "2.0.0"
description = "Official Python SDK for Mail.td — temp mail & temporary email with REST API, webhooks, and custom domains."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0", "argon2-cffi>=23.1.0"]
keywords = ["temp-mail", "temporary-email", "disposable-email", "email-testing", "email-api", "test-email", "email-verification", "mailtd", "mail-td", "sdk"]
authors = [{name = "Mail.td"}]

[project.urls]
Homepage = "https://mail.td"
Documentation = "https://docs.mail.td"
Repository = "https://github.com/mailtd/mailtd-python"

[tool.setuptools.packages.find]
include = ["mailtd*"]
